# opstatus

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  opstatus.db  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
alembic/: env.py
alembic/versions/: 394bc6fdde38_initial_schema.py
app/: main.py
app/api/: router.py
app/api/v1/: health.py  incidents.py  metrics.py  services.py
app/core/: config.py  error_handlers.py  exceptions.py  logging.py  metrics.py  middleware.py
app/db/: session.py
app/db/repositories/: __init__.py  base.py  incident_updates.py  incidents.py  services.py
app/models/: enums.py
app/models/orm/: __init__.py  associations.py  incident.py  incident_update.py  service.py
app/models/schemas/: incidents.py  services.py
app/services/: incidents.py  services.py
tests/integration/: conftest.py  test_incidents_api.py  test_operational_endpoints.py  test_services_api.py
tests/unit/: test_incident_status_transitions.py  test_placeholder.py  test_service_status_derivation.py
