[project]
name = "opstatus"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.29.0",
    "structlog>=24.1.0",
    "prometheus-client>=0.20.0",
    "pydantic-settings>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "mypy>=1.9.0",
    "ruff>=0.4.0",
    "pip-tools>=7.4.0",
    "pre-commit>=3.7.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = ["alembic/versions/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["app*"]
